syntax="proto3";
option java_outer_classname="ClientProto";
option java_package="com.fy.chatserver.communicate";
option optimize_for=SPEED;


message CInner {
  DataType type=1;
  oneof data {
    Msg msg=2;
    Notification notification=3;
    Heartbeat heartbeat=4;
  }
}

enum DataType {
  HEARTBEAT=0;
  MSG=1;
  NOTIFICATION=2;
}

message Notification {
  int32 code=1;
  string msg=2;
}

message Heartbeat {
  bytes data=1;
}

message Msg {
  MsgType type=1;
  string from=2;
  string to=3;
  string prefix=4;
  string suffix=5;
  bytes data=6;
}

enum MsgType {
  TEXT=0;
  PICTURE=1;
  VIDEO=2;
  VOICE=3;
}