syntax="proto3";
import "client_protocol.proto";
option java_outer_classname="ServerProto";
option java_package="com.fy.chatserver.communicate.proto";
option optimize_for=SPEED;


message SInner {
  DataType type=1;
  int64 ack=2;
  oneof data {
    ServerMsg msg=3;
    Notification notification=4;
    Heartbeat heartbeat=5;
  }
}

message ServerMsg {
  string serverId=1;
  Msg msg=2;
}